# msc-thesis

./: .gitignore  example.env  pyproject.toml  trivia.ipynb
agents/: CRITIQUE.md  DIAGNOSIS.md  LAB.md  SYNTHESIZER.md  TRIAGE.md
evaluation/: evaluation.ipynb  gemini.ipynb  gpt.ipynb
experiments/: baseline_pipeline.ipynb  create_kb.ipynb  diagnoagent.ipynb  final-pipeline.ipynb  gemini.ipynb  gemini_final.ipynb  gpt_final.ipynb  last_try.ipynb  llm_setup.py  playground.ipynb  retrieve_image.py  utils.py
qdrant_data/: raft_state.json
qdrant_data/collections/derm_vkb/0/: newest_clocks.json  replica_state.json
qdrant_data/collections/derm_vkb/0/segments/35881e1e-0bc1-4b57-8cfb-aa4e75e730b0/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_data/collections/derm_vkb/0/segments/35881e1e-0bc1-4b57-8cfb-aa4e75e730b0/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000013
qdrant_data/collections/derm_vkb/0/segments/60432231-0f3c-4d91-a481-f47ffda3d13f/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_data/collections/derm_vkb/0/segments/60432231-0f3c-4d91-a481-f47ffda3d13f/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000013
qdrant_data/collections/derm_vkb/0/segments/e8a52ea4-c41e-4bdc-a721-24395961d290/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_data/collections/derm_vkb/0/segments/f72d3362-1221-455e-9218-da1e2c7f47fe/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_data/collections/derm_vkb/0/wal/: first-index
(+8 files in other folders)
