[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain-google-genai>=2.1.12",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.7",
    "matplotlib>=3.10.6",
    "open-clip-torch>=3.1.0",
    "qdrant-client>=1.15.1",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
]
